--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "dependencies": {
-    "protobufjs": "^7.2.3",
-    "protobufjs-cli": "^1.1.1"
+    "@types/node": "^20.4.2",
+    "protobufjs": "^7.2.4",
+    "protobufjs-cli": "^1.1.1",
+    "zeromq": "^6.0.0-beta.17"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "eslint": "^8.44.0",
+    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.1.6"
   }
 }
