--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "zeromq": "^6.0.0-beta.17"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.44.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
+  },
+  "scripts": {
+    "test": "jest"
   }
-}
+  }
