--- a/.github/workflows/js-unit-test.yml
+++ b/.github/workflows/js-unit-test.yml
@@ -1,5 +1,13 @@
 name: Unit testing
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - dev
+      - main
+  pull_request:
+    branches:
+      - dev
+      - main
 
 jobs:
   test:
