--- a/.github/workflows/es-lint.yml
+++ b/.github/workflows/es-lint.yml
@@ -1,5 +1,11 @@
 name: Lint
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - dev
+  pull_request:
+    branches:
+      - dev
 
 jobs:
   lint:
