--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/node": "^20.4.2",
     "protobufjs": "^7.2.4",
     "protobufjs-cli": "^1.1.1",
-    "zeromq": "^6.0.0-beta.17"
+    "zeromq": "^6.0.0-beta.17 --zmq-shared"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
