--- a/.github/workflows/js-integration-test.yml
+++ b/.github/workflows/js-integration-test.yml
@@ -38,14 +38,14 @@ jobs:
       - name: Install npm@9.8.0
         run: npm i -g npm@9.8.0
 
-      # Work around for zmq dependancy
-      - name: Install libzmq
-        run: |
-          sudo apt update
-          sudo apt install libzmq3-dev
-
       - name: Install dependencies
         run: npm ci --prefer-offline
+
+      # Temporary fix for zmq install
+      - name: Get around zmq issue
+        run: |
+          npm uninstall zeromq
+          npm install zeromq@6.0.0-beta.17 --zmq-shared
      
       - name: Test with jest
       # TODO: fix sudo issue
