--- a/.github/workflows/js-integration-test.yml
+++ b/.github/workflows/js-integration-test.yml
@@ -5,7 +5,8 @@ name: Integration tests
 on:
   push:
     branches:
-      - dev
+      - led_service
+      -dev
   pull_request:
     branches:
       - dev
@@ -39,8 +40,8 @@ jobs:
         run: npm i -g npm@9.8.0
 
       # For zmq work around
-      - name: Install build dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential cmake
+      #- name: Install build dependencies
+       # run: sudo apt-get update && sudo apt-get install -y build-essential cmake
 
       - name: Install dependencies
         run: npm ci --prefer-offline
