--- a/.github/workflows/js-integration-test.yml
+++ b/.github/workflows/js-integration-test.yml
@@ -5,7 +5,6 @@ name: Integration tests
 on:
   push:
     branches:
-      - led_service
       - dev
   pull_request:
     branches:
@@ -39,19 +38,15 @@ jobs:
       - name: Install npm@9.8.0
         run: npm i -g npm@9.8.0
 
-      # For zmq work around
-      #- name: Install build dependencies
-       # run: sudo apt-get update && sudo apt-get install -y build-essential cmake
-
       - name: Install dependencies
-        run: npm ci --prefer-offline
-
-      - name: Reinstall zeromq
+        run: npm ci --prefer-offline --omit=zeromq
+      
+      - name: Install zeromq
         run: |
           npm uninstall zeromq
           npm install zeromq@6.0.0-beta.17 --zmq-shared
      
+     # TODO: fix sudo issue
       - name: Test with jest
-      # TODO: fix sudo issue
         run: |
-          sudo npm run test tests/integration
+          npm run test tests/integration
