--- a/.github/workflows/js-integration-test.yml
+++ b/.github/workflows/js-integration-test.yml
@@ -5,7 +5,6 @@ name: Integration tests
 on:
   push:
     branches:
-      - led_service
       - dev
   pull_request:
     branches:
@@ -40,7 +39,7 @@ jobs:
         run: npm i -g npm@9.8.0
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --omit=zeromq
+        run: npm ci --prefer-offline
       
       - name: Install zeromq
         run: |
@@ -50,4 +49,4 @@ jobs:
      # TODO: fix sudo issue
       - name: Test with jest
         run: |
-          npm run test tests/integration
+          sudo npm run test tests/integration
