--- a/.github/workflows/js-integration-test.yml
+++ b/.github/workflows/js-integration-test.yml
@@ -9,6 +9,7 @@ on:
   pull_request:
     branches:
       - dev
+      - din_relay_service
 
 jobs:
   test:
@@ -43,8 +44,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --prefer-offline
+
+      - name: Start server
+        run: sudo systemctl start edgepi-rpc-server.service
  
-     # TODO: fix sudo issue
       - name: Test with jest
         run: |
           npm run test tests/integration
