add ignore files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,6 @@
     "sourceType": "module",
     "project": ["./tsconfig.json"]
   },
+  "ignorePatterns": ["**/__mocks__/*.ts"],
   "rules": {}
 }
