--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^20.11.6",
     "protobufjs": "^7.2.6",
     "protobufjs-cli": "^1.1.2",
-    "zeromq": "^6.0.0-beta.19"
+    "zeromq": "6.0.0-beta.19"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
